--- a/app/containers/Editor/styles.css
+++ b/app/containers/Editor/styles.css
@@ -1,7 +1,7 @@
 .editor {
   width: 100%;
   height: 100%;
-  padding: 0.25rem;
+  /*padding: 0.25rem;*/
   display: flex;
   position: relative;
   flex-direction: column;
@@ -146,6 +146,7 @@
   outline: none;
   font-size: 0.14rem;
   color: #4D4D4D;
+  background-color: #F5F5F5;
   resize: none;
   padding: 0.15rem;
   overflow-x: hidden;
@@ -209,6 +210,46 @@
   top: 0;
   position: absolute;
   background-color: rgba(247, 248, 250, 0.8);
+}
+
+.upload {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 10001;
+  display: flex;
+  align-items: center;
+}
+.layout {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  transition: all 250ms;
+  background-color: rgba(0,0,0,0.5);
+}
+.dialog {
+  width: 400px;
+  height: 220px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 2px;
+  background-color: #FFF;
+  border: 1px solid #FFF;
+  z-index: 2;
+  padding: 15px;
+  transition: all 250ms;
+  box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.1), 0 4px 8px rgba(16, 22, 26, 0.2), 0 18px 46px 6px rgba(16, 22, 26, 0.2);
+}
+
+.drag {
+  flex: 1;
+  border: 1px dotted #CCC;
+  background-color:#F5F5F5;
+  border-radius: 2px;
 }
 
 @media only screen and (max-device-width: 1600px) {
